
	* deb-specific/db-upgrade.pl: Fixed syntax for PostgreSQL 8.3's
	stricter checking.

	* deb-specific/sf-2.6-complete.sql: Fixed a foreign key constraint
	for compatibility with PostgreSQL 8.3.

2008-02-13  Roland Mas  <lolando@debian.org>

	* common/include/Group.class.php: 
	* www/admin/unsubscribe.php: Fixed yet another few undefined
	variable warnings.

2008-01-19  Roland Mas  <lolando@debian.org>

	* cronjobs/massmail.php: Added missing i18n on the mass mail cron
	script.

2008-01-14  Roland Mas  <lolando@debian.org>

	* www/export/rss20_news.php: Fixed typo that prevented the RSS
	feed from returning any results.

2008-01-13  Roland Mas  <lolando@debian.org>

	* common/include/Plugin.class.php: Removed two unused functions.

	* common/include/utils.php: New functions util_make_url and
	util_make_link, whose goal is to provide a central place where URL
	scheme is implemented.
	* www/themes/gforge/Theme.class.php: Use these functions.
	* common/*: Ditto.
	* cronjobs/*: Ditto.
	* deb-specific/*: Ditto.
	* www/* (not recursive): Ditto.

2008-01-11  Roland Mas  <lolando@debian.org>

	* www/export/*.php: The previous validation didn't work since
	we're no longer using register_globals=on.  Fixed that.

	* www/export/*.php: Fixed a bunch of PHP warnings.

2008-01-09  Roland Mas  <lolando@debian.org>

	* www/export/rss_sfprojects.php: Validate input to prevent an SQL
	injection.
	* www/export/forum.php: Ditto.
	* www/export/rss20_newreleases.php: Ditto.
	* www/export/rss20_news.php: Ditto.
	* www/export/rss20_projects.php: Ditto.
	* www/export/rss_sfnewreleases.php: Ditto.
	* www/export/rss_sfnews.php: Ditto.

2007-12-12  Roland Mas  <lolando@debian.org>

	* www/tracker/taskmgr.php: Fetch project_task_id parameter from
	request.

	* deb-specific/db-upgrade.pl: Unregister obsolete themes, and
	register new ones.

	* setup: Look for CVS and Subversion repositories in
	/var/lib/gforge/chroot, if they're not found in the root
	directory.
